--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ p {
     max-width: 150px;
 }
 
-.about-me, .online-reputation-management, .social-media-marketing {
+.about-me, .work, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -114,11 +114,11 @@ p {
     color: #ffffff;
 }
 
-.about-me img, .online-reputation-management img, .social-media-marketing img {
+.about-me img, .work img, .social-media-marketing img {
     max-height: 200px;
 }
 
-.about-me h2, .online-reputation-management h2, .social-media-marketing h2 {
+.about-me h2, .work h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
