--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,13 +4,13 @@
     margin: 0;
 }
 
-/* grouped the selctors according to the type */
+/* changed to my fav color*/
 body {
-    background-color: #d9dcd6;
+    background-color: green;
 }
 
 a {
-    color: #ffffff;
+    color: black;
     text-decoration: none;
 }
 
@@ -20,9 +20,8 @@ p {
 
 .header {
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
+    font-family: 'Times New Roman', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: green;
 }
 
 .header h1 {
@@ -31,7 +30,7 @@ p {
 }
 
 .header h1 .name {
-    color: #d9dcd6;
+    color: black;
 }
 
 .header div {
@@ -71,9 +70,9 @@ p {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+    font-family: 'Times New Roman', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: orange;
+    color: black;
 }
 
 /* made my application image bigger than about me picture */
